--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
+  <link rel="shortcut icon" href="img/basketball.ico">
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>John Doe - Business Administration</title>
+  <title>Sebastian Au-Rivera - Business Administration</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Sebastian Au-Rivera</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/sebastianaurivera.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,23 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Sebastian Au-Rivera
         </h1>
         <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <p class="lead mb-4">First year pre-Business student at the University of California Riverside. I am looking for experiences and am open to internship opportunities to develop my skills for finance, marketing, or accounting. An eager college student skilled in Microsoft Office, customer service, time management, and team building.<br><br>
 
-        Enter bio here<br><br>
+        Seeking challenging position with a future-oriented company offering oppournities for growth and advancement where I actualize the potential, interpersonal and communication skills. I have fields of sales & marketing, human resources, training & development, distribute management and consultancy, public administration and business development.<br><br>
 
-        Enter bio here
+        Highly motivated professional with more than 2 years of customer service and administrative support experience. Proven track record in meeting deadlines effciently, resolving problems independently, using initative to improve processes and achieving hard to meet organizational objectives. Able to work under pressure and successfully deal with competing demands while maintaining complete condidentiality.
         </p>
         <div class="social-icons">
-          <a target="_blank" href="https://linkedin.com">
+          <a target="_blank" href="https://www.linkedin.com/in/sebastian-au-rivera-2742221a0/">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" href="https://github.com">
+          <a target="_blank" href="https://github.com/seb25viper">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" href="https://twitter.com">
-            <i class="fab fa-twitter"></i>
-          </a>
-          <a target="_blank" href="mailto:youremail@gmail.com">
+          <a target="_blank" href="mailto:sebastianaurivera25@@gmail.com">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +89,48 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://mulesoft.com">Company</a></div>
+            <h3 class="mb-0">Marketing Assistant for Shoe Company</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://mulesoft.com">Solestage</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Went to trade shows all over LA county <br> 
+              • Had to speak to buyers who are intrested <br>
+              • Experience with Photoshop, Brochure, and Catalogs<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">May 2018 - August 2018</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://pubnub.com">Whole Foods</a></div>
+            <h3 class="mb-0">Sales Associate</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://pubnub.com">Footlocker</a></div>
             <p>
-              • Responsible for checking out customers<br>
+              • Responsible for assisting customers and providing the best customer service<br>
               • etc etc<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">June 2019 - September 2019</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Tutor for middle school students</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">Kibo Academy</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • help studetns with there homework or problems with questions<br>
+            • Reviewed and graded student assignments<br>
+            • Provided extra worksheets for students to work on the subject struggled on<br>
+            • Tutored my entire Senior year of high school<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">August 2018 - May 2019</span>
           </div>
         </div>
 
@@ -153,10 +150,10 @@
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
             <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div>BA in Business Administration and Marketing</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">August 2019 - December 2023</span>
           </div>
         </div>
 
@@ -167,7 +164,7 @@
             <div>Project Management</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
+            <span class="text-primary">June 2023</span>
           </div>
         </div>
 
@@ -175,10 +172,10 @@
           <div class="resume-content">
             <h3 class="mb-0">University of California Riverside</h3>
             <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
+            <div>Management and Marketing</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">September 2019 - May 2023</span>
           </div>
         </div>
 
@@ -191,7 +188,11 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/IMG_4271.jpg" width="500px">
+            <img src="img/IMG_4272.jpg" width="500px">
+            <br>
+            <img src="img/IMG_4273.jpg" width="500px">
+            <img src="img/IMG_4274.jpg" width="500px">
         </center>
       </div>
     </section>
@@ -199,7 +200,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Sebastian Au-Rivera</center><br>
 
 
   </div>
